[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'


[project]
name = 'MahjongGame'
version = '0.0.0'
description = 'A library designed to manage and simulate the game state of Mahjong based on a series of specified actions.'

readme = 'README.md'
license = {file='LICENSE'}

requires-python = '>=3.13'
dependencies = [
]

authors = [
   {name='AtoKashinoki', email='atokashinoki@gmail.com'}
]
classifiers = [
   'Development Status :: 3 - Alpha',
   'Intended Audience :: Developers',
   'License :: OSI Approved :: MIT License',
   'Natural Language :: Jamanese',
   'Operating System :: OS Independent',
   'Programming Language :: Python :: 3.13',
   'Programming Language :: Python :: Implementation :: CPython',
   'Topic :: Software Development :: Libraries :: Python Modules',
   'Topic :: Utilities',
]


[project.urls]
'Homepage' = 'https://github.com/AtoKashinoki/MahjongGame'
'Bug Traker' = 'https://github.com/AtoKashinoki/MahjongGame/issues'
'Documentation' = 'https://github.com/AtoKashinoki/MahjongGame'
'Source' = 'https://github.com/AtoKashinoki/MahjongGame.git'


[project.scripts]
